--- a/optaplanner-docs/src/main/asciidoc/QuickStart/SpringBoot/SpringBootQuickStart-chapter.adoc
+++ b/optaplanner-docs/src/main/asciidoc/QuickStart/SpringBoot/SpringBootQuickStart-chapter.adoc
@@ -14,7 +14,7 @@ application with OptaPlanner's constraint solving Artificial Intelligence (AI).
 
 You will build a REST application that optimizes a school timetable for students and teachers:
 
-image::QuickStart/SpringBoot/timeTableAppScreenshot.png[]
+image::images/timeTableAppScreenshot.png[]
 
 Your service will assign `Lesson` instances to `Timeslot` and `Room` instances automatically
 by using AI to adhere to hard and soft scheduling _constraints_, such as:
@@ -25,19 +25,19 @@ by using AI to adhere to hard and soft scheduling _constraints_, such as:
 * A teacher prefers to teach in a single room.
 * A teacher prefers to teach sequential lessons and dislikes gaps between lessons.
 
-Mathematically speaking, school timetabling is an _NP-hard_ problem.
-That means it is difficult to scale.
-Simply brute force iterating through all possible combinations takes millions of years
-for a non-trivial dataset, even on a supercomputer.
+Mathematically speaking, school timetabling is an _NP-hard_ problem. That means it is difficult to scale. Simply using brute force to iterate through all possible combinations would take millions of years for a non-trivial data set, even on a supercomputer.
+
 Luckily, AI constraint solvers such as OptaPlanner have advanced algorithms
 that deliver a near-optimal solution in a reasonable amount of time.
 
 == What you'll need
 
-* https://www.oracle.com/java/technologies/javase-downloads.html[JDK 8 or later]
-* https://maven.apache.org/download.cgi[Maven 3.2+] or https://gradle.org/install/[Gradle4+]
-* An IDE, such as https://www.jetbrains.com/idea[IntelliJ IDEA], VSCode, Eclipse or NetBeans
+:java_version: 1.8
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/prereq_editor_jdk_buildtools.adoc[]
 
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/how_to_complete_this_guide.adoc[]
+
+[[scratch]]
 == The build file and the dependencies
 
 Use https://start.spring.io/[Spring Initializr] to generate an application
@@ -51,104 +51,18 @@ Add it manually in your build file.
 If you choose Maven, your `pom.xml` file has the following content:
 
 ====
-[source,xml,subs=attributes+]
+[source,xml,tabsize=2]
 ----
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>{version-org-spring-framework-boot}</version>
-    </parent>
-
-    <groupId>com.example</groupId>
-    <artifactId>constraint-solving-ai-optaplanner</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
-    <name>Constraint Solving AI with OptaPlanner</name>
-    <description>A Spring Boot OptaPlanner example to generate a school timetable.</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.optaplanner</groupId>
-            <artifactId>optaplanner-spring-boot-starter</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.junit.vintage</groupId>
-                    <artifactId>junit-vintage-engine</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-    </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.optaplanner</groupId>
-                <artifactId>optaplanner-spring-boot-starter</artifactId>
-                <version>{project-version}</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
-</project>
+include::initial/pom.xml[]
 ----
 ====
 
 On the other hand, in Gradle, your `build.gradle` file has this content:
 
 ====
-[source,groovy,subs=attributes+]
+[source,groovy,tabsize=2]
 ----
-plugins {
-    id "org.springframework.boot" version "{version-org-spring-framework-boot}"
-    id "io.spring.dependency-management" version "1.0.9.RELEASE"
-    id "java"
-}
-
-group = "com.example"
-version = "0.1.0-SNAPSHOT"
-sourceCompatibility = "1.8"
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    implementation "org.springframework.boot:spring-boot-starter-web"
-    implementation "org.optaplanner:optaplanner-spring-boot-starter:{project-version}"
-    testImplementation("org.springframework.boot:spring-boot-starter-test") {
-        exclude group: "org.junit.vintage", module: "junit-vintage-engine"
-    }
-}
-
-test {
-    useJUnitPlatform()
-}
+include::initial/build.gradle[]
 ----
 ====
 
@@ -158,7 +72,7 @@ test {
 Your goal is to assign each lesson to a time slot and a room.
 You will create these classes:
 
-image::QuickStart/SpringBoot/timeTableClassDiagramPure.png[]
+image::images/timeTableClassDiagramPure.png[]
 
 === Timeslot
 
@@ -173,50 +87,9 @@ So there is no need for https://docs.optaplanner.org/latestFinal/optaplanner-doc
 Create the `src/main/java/com/example/domain/Timeslot.java` class:
 
 ====
-[source,java]
+[source,java,tabsize=2]
 ----
-package com.example.domain;
-
-import java.time.DayOfWeek;
-import java.time.LocalTime;
-
-public class Timeslot {
-
-    private DayOfWeek dayOfWeek;
-    private LocalTime startTime;
-    private LocalTime endTime;
-
-    private Timeslot() {
-    }
-
-    public Timeslot(DayOfWeek dayOfWeek, LocalTime startTime, LocalTime endTime) {
-        this.dayOfWeek = dayOfWeek;
-        this.startTime = startTime;
-        this.endTime = endTime;
-    }
-
-    @Override
-    public String toString() {
-        return dayOfWeek + " " + startTime.toString();
-    }
-
-    // ********************************
-    // Getters and setters
-    // ********************************
-
-    public DayOfWeek getDayOfWeek() {
-        return dayOfWeek;
-    }
-
-    public LocalTime getStartTime() {
-        return startTime;
-    }
-
-    public LocalTime getEndTime() {
-        return endTime;
-    }
-
-}
+include::initial/src/main/java/com/example/domain/Timeslot.java[]
 ----
 ====
 
@@ -236,35 +109,9 @@ and they can accommodate all lessons.
 Create the `src/main/java/com/example/domain/Room.java` class:
 
 ====
-[source,java]
+[source,java,tabsize=2]
 ----
-package com.example.domain;
-
-public class Room {
-
-    private String name;
-
-    private Room() {
-    }
-
-    public Room(String name) {
-        this.name = name;
-    }
-
-    @Override
-    public String toString() {
-        return name;
-    }
-
-    // ********************************
-    // Getters and setters
-    // ********************************
-
-    public String getName() {
-        return name;
-    }
-
-}
+include::initial/src/main/java/com/example/domain/Room.java[]
 ----
 ====
 
@@ -283,7 +130,7 @@ During solving, OptaPlanner changes the `timeslot` and `room` fields of the `Les
 to assign each lesson to a time slot and a room.
 Because OptaPlanner changes these fields, `Lesson` is a _planning entity_:
 
-image::QuickStart/SpringBoot/timeTableClassDiagramAnnotated.png[]
+image::images/timeTableClassDiagramAnnotated.png[]
 
 Most of the fields in the previous diagram contain input data, except for the orange fields:
 A lesson's `timeslot` and `room` fields are unassigned (`null`) in the input data
@@ -297,80 +144,9 @@ Their containing class, `Lesson`, requires an `@PlanningEntity` annotation.
 Create the `src/main/java/com/example/domain/Lesson.java` class:
 
 ====
-[source,java]
+[source,java,tabsize=2]
 ----
-package com.example.domain;
-
-import org.optaplanner.core.api.domain.entity.PlanningEntity;
-import org.optaplanner.core.api.domain.variable.PlanningVariable;
-
-@PlanningEntity
-public class Lesson {
-
-    private Long id;
-
-    private String subject;
-    private String teacher;
-    private String studentGroup;
-
-    @PlanningVariable(valueRangeProviderRefs = "timeslotRange")
-    private Timeslot timeslot;
-
-    @PlanningVariable(valueRangeProviderRefs = "roomRange")
-    private Room room;
-
-    private Lesson() {
-    }
-
-    public Lesson(Long id, String subject, String teacher, String studentGroup) {
-        this.id = id;
-        this.subject = subject;
-        this.teacher = teacher;
-        this.studentGroup = studentGroup;
-    }
-
-    @Override
-    public String toString() {
-        return subject + "(" + id + ")";
-    }
-
-    // ********************************
-    // Getters and setters
-    // ********************************
-
-    public Long getId() {
-        return id;
-    }
-
-    public String getSubject() {
-        return subject;
-    }
-
-    public String getTeacher() {
-        return teacher;
-    }
-
-    public String getStudentGroup() {
-        return studentGroup;
-    }
-
-    public Timeslot getTimeslot() {
-        return timeslot;
-    }
-
-    public void setTimeslot(Timeslot timeslot) {
-        this.timeslot = timeslot;
-    }
-
-    public Room getRoom() {
-        return room;
-    }
-
-    public void setRoom(Room room) {
-        this.room = room;
-    }
-
-}
+include::initial/src/main/java/com/example/domain/Lesson.java[]
 ----
 ====
 
@@ -396,10 +172,10 @@ to avoid common pitfalls.
 
 == Define the constraints and calculate the score
 
-A _score_ represents the quality of a given solution.
+A _score_ represents the quality of a specific solution.
 The higher the better.
 OptaPlanner looks for the best solution, which is the solution with the highest score found in the available time.
-It could be the _optimal_ solution.
+It might be the _optimal_ solution.
 
 Because this use case has hard and soft constraints,
 use the `HardSoftScore` class to represent the score:
@@ -414,7 +190,7 @@ Soft constraints are weighted too, against other soft constraints.
 To calculate the score, you could implement an `EasyScoreCalculator` class:
 
 ====
-[source,java]
+[source,java,tabsize=2]
 ----
 public class TimeTableEasyScoreCalculator implements EasyScoreCalculator<TimeTable> {
 
@@ -459,68 +235,9 @@ to perform incremental score calculation.
 It uses OptaPlanner's ConstraintStream API which is inspired by Java 8 Streams and SQL:
 
 ====
-[source,java]
+[source,java,tabsize=2]
 ----
-package com.example.solver;
-
-import com.example.domain.Lesson;
-import org.optaplanner.core.api.score.buildin.hardsoft.HardSoftScore;
-import org.optaplanner.core.api.score.stream.Constraint;
-import org.optaplanner.core.api.score.stream.ConstraintFactory;
-import org.optaplanner.core.api.score.stream.ConstraintProvider;
-import org.optaplanner.core.api.score.stream.Joiners;
-
-public class TimeTableConstraintProvider implements ConstraintProvider {
-
-    @Override
-    public Constraint[] defineConstraints(ConstraintFactory constraintFactory) {
-        return new Constraint[] {
-                // Hard constraints
-                roomConflict(constraintFactory),
-                teacherConflict(constraintFactory),
-                studentGroupConflict(constraintFactory),
-                // Soft constraints are only implemented in the "complete" implementation
-        };
-    }
-
-    private Constraint roomConflict(ConstraintFactory constraintFactory) {
-        // A room can accommodate at most one lesson at the same time.
-
-        // Select a lesson ...
-        return constraintFactory.from(Lesson.class)
-                // ... and pair it with another lesson ...
-                .join(Lesson.class,
-                        // ... in the same timeslot ...
-                        Joiners.equal(Lesson::getTimeslot),
-                        // ... in the same room ...
-                        Joiners.equal(Lesson::getRoom),
-                        // ... and the pair is unique (different id, no reverse pairs)
-                        Joiners.lessThan(Lesson::getId))
-                // then penalize each pair with a hard weight.
-                .penalize("Room conflict", HardSoftScore.ONE_HARD);
-    }
-
-    private Constraint teacherConflict(ConstraintFactory constraintFactory) {
-        // A teacher can teach at most one lesson at the same time.
-        return constraintFactory.from(Lesson.class)
-                .join(Lesson.class,
-                        Joiners.equal(Lesson::getTimeslot),
-                        Joiners.equal(Lesson::getTeacher),
-                        Joiners.lessThan(Lesson::getId))
-                .penalize("Teacher conflict", HardSoftScore.ONE_HARD);
-    }
-
-    private Constraint studentGroupConflict(ConstraintFactory constraintFactory) {
-        // A student can attend at most one lesson at the same time.
-        return constraintFactory.from(Lesson.class)
-                .join(Lesson.class,
-                        Joiners.equal(Lesson::getTimeslot),
-                        Joiners.equal(Lesson::getStudentGroup),
-                        Joiners.lessThan(Lesson::getId))
-                .penalize("Student group conflict", HardSoftScore.ONE_HARD);
-    }
-
-}
+include::initial/src/main/java/com/example/solver/TimeTableConstraintProvider.java[]
 ----
 ====
 
@@ -536,36 +253,263 @@ it is a _planning solution_ and it has a score:
 for example, a solution with the score `-4init/0hard/0soft`.
 * If it breaks hard constraints, then it is an _infeasible_ solution,
 for example, a solution with the score `-2hard/-3soft`.
-* If it adheres to all hard constraints, then it is a _feasible_ solution,
+* If it adheres to all hard constraints, then it is an _feasible_ solution,
 for example, a solution with the score `0hard/-7soft`.
 
 Create the `src/main/java/com/example/domain/TimeTable.java` class:
 
 ====
-[source,java]
+[source,java,tabsize=2]
 ----
-package com.example.domain;
+include::initial/src/main/java/com/example/domain/TimeTable.java[]
+----
+====
 
-import java.util.List;
+The `TimeTable` class has an `@PlanningSolution` annotation,
+so OptaPlanner knows that this class contains all of the input and output data.
 
-import org.optaplanner.core.api.domain.solution.PlanningEntityCollectionProperty;
-import org.optaplanner.core.api.domain.solution.PlanningScore;
-import org.optaplanner.core.api.domain.solution.PlanningSolution;
-import org.optaplanner.core.api.domain.solution.drools.ProblemFactCollectionProperty;
-import org.optaplanner.core.api.domain.valuerange.ValueRangeProvider;
-import org.optaplanner.core.api.score.buildin.hardsoft.HardSoftScore;
+Specifically, this class is the input of the problem:
 
-@PlanningSolution
-public class TimeTable {
+* A `timeslotList` field with all time slots
+** This is a list of problem facts, because they do not change during solving.
+* A `roomList` field with all rooms
+** This is a list of problem facts, because they do not change during solving.
+* A `lessonList` field with all lessons
+** This is a list of planning entities, because they change during solving.
+** Of each `Lesson`:
+*** The values of the `timeslot` and `room` fields are typically still `null`, so unassigned.
+They are planning variables.
+***  The other fields, such as `subject`, `teacher` and `studentGroup`, are filled in.
+These fields are problem properties.
 
-    @ValueRangeProvider(id = "timeslotRange")
-    @ProblemFactCollectionProperty
-    private List<Timeslot> timeslotList;
+However, this class is also the output of the solution:
 
-    @ValueRangeProvider(id = "roomRange")
-    @ProblemFactCollectionProperty
-    private List<Room> roomList;
+* A `lessonList` field for which each `Lesson` instance has non-null `timeslot` and `room` fields after solving
+* A `score` field that represents the quality of the output solution, for example, `0hard/-5soft`
 
+=== The value range providers
+
+The `timeslotList` field is a value range provider.
+It holds the `Timeslot` instances which OptaPlanner can pick from to assign to the `timeslot` field of `Lesson` instances.
+The `timeslotList` field has an `@ValueRangeProvider` annotation to connect those two,
+//those two - please clarify
+by matching the value of `id` field with the `valueRangeProviderRefs` property of the `@PlanningVariable` annotation in the `Lesson` class.
+
+Following the same logic, the `roomList` field also  has an `@ValueRangeProvider` annotation.
+
+=== The problem fact and planning entity properties
+
+Furthermore, OptaPlanner needs to know which `Lesson` instances it can change
+as well as how to retrieve the `Timeslot` and `Room` instances used for score calculation
+by your `TimeTableConstraintProvider`.
+
+The `timeslotList` and `roomList` fields have an `@ProblemFactCollectionProperty` annotation,
+so your `TimeTableConstraintProvider` can select _from_ those instances.
+
+The `lessonList` has an `@PlanningEntityCollectionProperty` annotation,
+so OptaPlanner can change them during solving
+and your `TimeTableConstraintProvider` can select _from_ those too.
+
+== Create the solver service
+
+Now you are ready to put everything together and create a REST service.
+But solving planning problems on REST threads causes HTTP timeout issues.
+Therefore, the Spring Boot starter injects a `SolverManager` class,
+which runs solvers in a separate thread pool
+and can solve multiple datasets in parallel.
+
+Create the `src/main/java/com/example/solver/TimeTableController.java` class:
+
+====
+[source,java,tabsize=2]
+----
+include::initial/src/main/java/com/example/solver/TimeTableController.java[]
+----
+====
+
+For simplicity's sake, this initial implementation waits for the solver to finish,
+which can still cause an HTTP timeout.
+The _complete_ implementation avoids HTTP timeouts much more elegantly.
+
+== Set the termination time
+
+Without a termination setting or a termination event, the solver runs forever.
+To avoid that, limit the solving time to five seconds.
+That is short enough to avoid the HTTP timeout.
+
+Create the `src/main/resources/application.properties` file:
+
+====
+[source,properties]
+----
+include::initial/src/main/resources/application.properties[]
+----
+====
+
+
+== Make the application executable
+
+Package everything into a single executable JAR file driven by a standard Java `main()` method:
+
+Replace the `DemoApplication.java` class created by Spring Initializr
+with the `src/main/java/com/example/TimeTableSpringBootApp.java` class:
+
+====
+[source,java,tabsize=2]
+----
+include::initial/src/main/java/com/example/TimeTableSpringBootApp.java[]
+----
+====
+
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/spring-boot-application.adoc[]
+
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/build_an_executable_jar_subhead.adoc[]
+
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/build_an_executable_jar_with_both.adoc[]
+
+=== Try the application
+
+Now that the application is running, you can test the REST service.
+You can use any REST client you wish.
+The following example uses the Linux command `curl` to send a POST request:
+
+----
+$ curl -i -X POST http://localhost:8080/timeTable/solve -H "Content-Type:application/json" -d '{"timeslotList":[{"dayOfWeek":"MONDAY","startTime":"08:30:00","endTime":"09:30:00"},{"dayOfWeek":"MONDAY","startTime":"09:30:00","endTime":"10:30:00"}],"roomList":[{"name":"Room A"},{"name":"Room B"}],"lessonList":[{"id":1,"subject":"Math","teacher":"A. Turing","studentGroup":"9th grade"},{"id":2,"subject":"Chemistry","teacher":"M. Curie","studentGroup":"9th grade"},{"id":3,"subject":"French","teacher":"M. Curie","studentGroup":"10th grade"},{"id":4,"subject":"History","teacher":"I. Jones","studentGroup":"10th grade"}]}'
+----
+
+After about five seconds, according to the termination spent time defined in your `application.properties`,
+the service returns output similar to the following example:
+
+----
+HTTP/1.1 200
+Content-Type: application/json
+...
+
+{"timeslotList":...,"roomList":...,"lessonList":[{"id":1,"subject":"Math","teacher":"A. Turing","studentGroup":"9th grade","timeslot":{"dayOfWeek":"MONDAY","startTime":"08:30:00","endTime":"09:30:00"},"room":{"name":"Room A"}},{"id":2,"subject":"Chemistry","teacher":"M. Curie","studentGroup":"9th grade","timeslot":{"dayOfWeek":"MONDAY","startTime":"09:30:00","endTime":"10:30:00"},"room":{"name":"Room A"}},{"id":3,"subject":"French","teacher":"M. Curie","studentGroup":"10th grade","timeslot":{"dayOfWeek":"MONDAY","startTime":"08:30:00","endTime":"09:30:00"},"room":{"name":"Room B"}},{"id":4,"subject":"History","teacher":"I. Jones","studentGroup":"10th grade","timeslot":{"dayOfWeek":"MONDAY","startTime":"09:30:00","endTime":"10:30:00"},"room":{"name":"Room B"}}],"score":"0hard/0soft"}
+----
+
+Notice that your application assigned all four lessons to one of the two time slots and one of the two rooms.
+Also notice that it conforms to all hard constraints.
+For example, M. Curie's two lessons are in different time slots.
+
+On the server side, the `info` log show what OptaPlanner did in those five seconds:
+
+[options="nowrap"]
+----
+... Solving started: time spent (33), best score (-8init/0hard/0soft), environment mode (REPRODUCIBLE), random (JDK with seed 0).
+... Construction Heuristic phase (0) ended: time spent (73), best score (0hard/0soft), score calculation speed (459/sec), step total (4).
+... Local Search phase (1) ended: time spent (5000), best score (0hard/0soft), score calculation speed (28949/sec), step total (28398).
+... Solving ended: time spent (5000), best score (0hard/0soft), score calculation speed (28524/sec), phase total (2), environment mode (REPRODUCIBLE).
+----
+
+=== Test the application
+
+A good application includes test coverage.
+In a JUnit test, generate a test dataset and send it to the `TimeTableController` to solve.
+
+Create the `src/test/java/com/example/solver/TimeTableControllerTest.java` class:
+
+====
+[source,java,tabsize=2]
+----
+include::initial/src/test/java/com/example/solver/TimeTableControllerTest.java[]
+----
+====
+
+This test verifies that after solving, all lessons are assigned to a time slot and a room.
+It also verifies that it found a feasible solution (no hard constraints broken).
+
+Normally, the solver finds a feasible solution in less than 200 milliseconds.
+Notice how the `@SpringBootTest` annotation's properties overwrites the solver termination
+to terminate as soon as a feasible solution (`0hard/*soft`) is found.
+This avoids hard coding a solver time, because the unit test might run on arbitrary hardware.
+This approach ensures that the test runs long enough to find a feasible solution, even on slow machines.
+But it does not run a millisecond longer than it strictly must, even on fast machines.
+
+=== Logging
+
+When adding constraints in your `ConstraintProvider`,
+keep an eye on the _score calculation speed_ in the `info` log,
+after solving for the same amount of time, to assess the performance impact:
+
+----
+... Solving ended: ..., score calculation speed (29455/sec), ...
+----
+
+To understand how OptaPlanner is solving your problem internally,
+change the logging in the `application.properties` file or with a `-D` system property:
+
+====
+[source,properties]
+----
+logging.level.org.optaplanner=debug
+----
+====
+
+Use `debug` logging to show every _step_:
+
+[options="nowrap"]
+----
+... Solving started: time spent (67), best score (-20init/0hard/0soft), environment mode (REPRODUCIBLE), random (JDK with seed 0).
+...     CH step (0), time spent (128), score (-18init/0hard/0soft), selected move count (15), picked move ([Math(101) {null -> Room A}, Math(101) {null -> MONDAY 08:30}]).
+...     CH step (1), time spent (145), score (-16init/0hard/0soft), selected move count (15), picked move ([Physics(102) {null -> Room A}, Physics(102) {null -> MONDAY 09:30}]).
+...
+----
+
+Use `trace` logging to show every _step_ and every _move_ per step.
+
+== Summary
+
+Congratulations!
+You have just developed a https://spring.io/[Spring] application with https://www.optaplanner.org/[OptaPlanner]!
+
+== Further improvements: Database and UI integration
+
+Now try adding database and UI integration:
+
+. Create https://spring.io/guides/gs/accessing-data-jpa/[JPA repositories] for `Timeslot`, `Room`, and `Lesson`.
+
+. https://spring.io/guides/gs/accessing-data-rest/[Expose them through REST].
+
+. Build a `TimeTableRepository` facade to read and write a `TimeTable` instance in a single transaction.
+
+. Adjust the `TimeTableController` accordingly:
++
+====
+[source,java,tabsize=2]
+----
+include::complete/src/main/java/com/example/solver/TimeTableController.java[]
+----
+====
++
+For simplicity's sake, this code handles only one `TimeTable` instance,
+but it is straightforward to enable multi-tenancy and handle multiple `TimeTable` instances of different high schools in parallel.
++
+The `getTimeTable()` method returns the latest timetable from the database.
+It uses the `ScoreManager` (which is automatically injected)
+to calculate the score of that timetable, so the UI can show the score.
++
+The `solve()` method starts a job to solve the current timetable and store the time slot and room assignments in the database.
+It uses the `SolverManager.solveAndListen()` method to listen to intermediate best solutions
+and update the database accordingly.
+This enables the UI to show progress while the backend is still solving.
+
+. Adjust the `TimeTableControllerTest` instance accordingly, now that the `solve()` method returns immediately.
+Poll for the latest solution until the solver finishes solving:
++
+====
+[source,java,tabsize=2]
+----
+include::complete/src/test/java/com/example/solver/TimeTableControllerTest.java[]
+----
+====
+
+. Build an attractive web UI on top of these REST methods to visualize the timetable.
+
+
+Take a look at the *complete* example source code to see how this all turns out.
+
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/footer.adoc[]
     @PlanningEntityCollectionProperty
     private List<Lesson> lessonList;
 
@@ -1055,3 +999,5 @@ public class TimeTableControllerTest {
 . Build an attractive web UI on top of these REST methods to visualize the timetable.
 
 Take a look at the example's source code to see how this all turns out.
+
+include::https://raw.githubusercontent.com/spring-guides/getting-started-macros/master/footer.adoc[]
